# napari-ISM

./: README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
src/napari_ism/: __init__.py  _reader.py  _sample_data.py  _widget.py  _writer.py  napari.yaml
src/napari_ism/_tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
