[build-system]
requires = ["setuptools", "wheel", "h5py", "PyQt5", "brighteyes-ism >= 1.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "napari-ISM"
version = "1.0.6"
authors = [
  { name="Alessandro Zunino", email="alessandro.zunino@iit.it" },
]
description = "A Napari plugin for analysing and simulating ISM images"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE.txt"}
classifiers = [
    "Framework :: napari",
   	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]

[project.urls]
"Homepage" = "https://github.com/VicidominiLab/napari-ism"
"Documentation" = "https://brighteyes-ism.readthedocs.io"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79