[metadata]
name = napari-ISM
version = 0.0.1
author = Alessandro Zunino
author_email = alessandro.zunino@iit.it
url = https://github.com/VicidominiLab/napari-ISM
license = LGPL-3.0-only
description = It performs Adaptive Pixel Reassignment.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
project_urls =
    Bug Tracker = https://github.com/VicidominiLab/napari-ISM/issues
    Documentation = https://github.com/VicidominiLab/napari-ISM#README.md
    Source Code = https://github.com/VicidominiLab/napari-ISM
    User Support = https://github.com/VicidominiLab/napari-ISM/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
package_dir =
    =src

# add your package requirements here
install_requires =
    numpy
    magicgui
    qtpy


[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.packages.find]
where = src

[options.package_data]
* = *.yaml

[options.entry_points]
napari.manifest =
    napari-ISM = napari_ism:napari.yaml
